<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppPlay">

    <LinearLayout
        android:id="@+id/noNetworkContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/ColorPrimaryLight"
        android:orientation="vertical"
        android:visibility="invisible">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_nowifi"
            android:id="@+id/network_status"
            app:tint="@color/ColorAccent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/network_status" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_internet_connectivity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/ColorAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/network_instructions"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/ColorAccent"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:text="@string/okay"
                android:id="@+id/btn_networkOkay"
                android:background="@drawable/button_shape"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_margin="50dp"
                android:text="@string/cancel"
                android:id="@+id/btn_networkCancel"
                android:background="@drawable/button_shape"/>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loading_screen"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>